--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # People that contributed to this project
 
-Suara Ayomide <aysuarex@gmail.com>
-Bamidele Adefolaju <bamideleadefolaju@gmail.com>
+Mohammed Bermime <bermime1@gmail.com>
